# tremolite

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  REQUIREMENTS.md  SESSION_PLAN.md  SOUL.md  compose.yaml  config.example.toml  config.toml  install.sh  module-inheritance-analysis.md  nul  tasks.md  tremolite  tremolite-implementation-checklist-v0.2.md  tremolite-implementation-checklist-v0.3.md  tremolite-plan-memory-deep-optimization.md  tremolite-plan-memory-v2.0.md  tremolite-plan-v0.2.md  tremolite-plan-v0.3.md  tremolite-plan-v0.4.md  tremolite-plan-v1.0.md  tremolite-plan-v1.1.md  tremolite-plan-v1.2.md  tremolite-plan-v2.0.md  watchdog.sh
crates/tremolite-attention/: Cargo.toml
crates/tremolite-attention/src/: lib.rs
crates/tremolite-channels/: Cargo.toml
crates/tremolite-channels/src/: lib.rs
crates/tremolite-cli/: Cargo.toml
crates/tremolite-cli/src/: cli.rs  main.rs  tui.rs
crates/tremolite-compress/: Cargo.toml
crates/tremolite-compress/src/: lib.rs
crates/tremolite-config/: Cargo.toml
crates/tremolite-config/src/: lib.rs
crates/tremolite-core/: Cargo.toml
crates/tremolite-core/src/: gateway.rs  lib.rs  scheduler.rs
crates/tremolite-core/src/module/: mod.rs  process_module.rs
crates/tremolite-core/src/modules/: attention.rs  cron.rs  delegation.rs  emotion.rs  mcp.rs  memory.rs  mod.rs  plan.rs  session.rs  skill.rs  tools.rs  webhook.rs
crates/tremolite-core/src/protocol/: mod.rs  registry.rs  types.rs
crates/tremolite-cron/: Cargo.toml
crates/tremolite-cron/src/: lib.rs
crates/tremolite-dashboard/: Cargo.toml
crates/tremolite-dashboard/src/: lib.rs
crates/tremolite-delegation/: Cargo.toml
crates/tremolite-delegation/src/: lib.rs
crates/tremolite-distiller/: Cargo.toml
crates/tremolite-distiller/src/: lib.rs
crates/tremolite-emotion/: Cargo.toml
crates/tremolite-emotion/src/: lib.rs  plugin.rs
crates/tremolite-learn/: Cargo.toml
crates/tremolite-learn/src/: lib.rs
crates/tremolite-llm/: Cargo.toml
crates/tremolite-llm/src/: deepseek.rs  lib.rs  ollama.rs  openai.rs
crates/tremolite-mcp/: Cargo.toml
crates/tremolite-mcp/src/: lib.rs
crates/tremolite-memory/: Cargo.toml
crates/tremolite-memory/src/: embedding.rs  lib.rs
crates/tremolite-message/: Cargo.toml
crates/tremolite-message/src/: lib.rs
crates/tremolite-packaging/: Cargo.toml
crates/tremolite-packaging/src/: lib.rs
crates/tremolite-plan/: Cargo.toml
crates/tremolite-plan/src/: lib.rs
crates/tremolite-plan/tremolite-plan/: Cargo.toml
crates/tremolite-plan/tremolite-plan/src/: lib.rs
crates/tremolite-plugin/: Cargo.toml
crates/tremolite-plugin/src/: lib.rs  loader.rs
crates/tremolite-reflection/: Cargo.toml
crates/tremolite-reflection/src/: lib.rs  temp_patch.txt
crates/tremolite-self-learner/: Cargo.toml
crates/tremolite-self-learner/src/: lib.rs
crates/tremolite-server/: Cargo.toml
crates/tremolite-server/src/: http_channel.rs  lib.rs  napcat_channel.rs  prompts.rs  qqbot_channel.rs
crates/tremolite-session/: Cargo.toml
crates/tremolite-session/src/: lib.rs
crates/tremolite-tools/: Cargo.toml
crates/tremolite-tools/src/: append_file.rs  cp_file.rs  diff_files.rs  dns_lookup.rs  echo.rs  gh_issue.rs  gh_pr.rs  gh_search.rs  git.rs  glob_files.rs  http.rs  jq_query.rs  lib.rs  list_dir.rs  mv_file.rs  ping.rs  read_file.rs  rm_file.rs  search.rs  shell.rs  system.rs  time.rs  web_search.rs  write_file.rs
data/learn/: skills.json
data/plan/: plans.json
data/tremolite/: emotion.json
data/tremolite/learn/: skills.json
data/tremolite/memory/: l1_working.json  l2_profile.json
data/tremolite/plan/: plans.json
data/tremolite/skills/: architecture-analysis.md  code-review.md  debugging.md  file-operations.md  git-workflow.md  linux-operations.md  mcp-tools.md  problem-diagnosis.md  rust-development.md  task-decomposition.md  understand_text.md  web-development.md
docs/: memory-architecture.md  module-design.md  module-protocol.md  session-scheduler-plan.md  tremolite-roadmap-v1.0.md
docs/whitepaper/: 能力路由在智能体模块化中的应用.md
logs/: tremolite.log.2026-06-05-20  tremolite.log.2026-06-06-14  tremolite.log.2026-06-06-20  tremolite.log.2026-06-06-21  tremolite.log.2026-06-06-22  tremolite.log.2026-06-06-23  tremolite.log.2026-06-07-17  tremolite.log.2026-06-07-18  tremolite.log.2026-06-07-19  tremolite.log.2026-06-09-08  tremolite.log.2026-06-09-09  tremolite.log.2026-06-09-10  tremolite.log.2026-06-10-06  tremolite.log.2026-06-10-07
templates/profiles/example/: SOUL.md
templates/profiles/example/skills/: README.md
