[package]
name = "tremolite-attention"
version = "0.1.0"
edition = "2021"
description = "多尺度注意力（语义评分 via siliconflow API）"

[dependencies]
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
ureq = "3"

[dev-dependencies]
tremolite-config = { path = "../tremolite-config" }
toml = "0.8"
