[package]
name = "tremolite-cli"
version = "0.3.0"
edition = "2021"
description = "CLI 入口 — Phase 10 全模块集成引擎"

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
anyhow.workspace = true
tremolite-core = { path = "../tremolite-core" }
tremolite-plugin = { path = "../tremolite-plugin" }
tremolite-tools = { path = "../tremolite-tools" }
tremolite-emotion = { path = "../tremolite-emotion" }
tremolite-memory = { path = "../tremolite-memory" }
tremolite-attention = { path = "../tremolite-attention" }
tremolite-learn = { path = "../tremolite-learn" }
tremolite-plan = { path = "../tremolite-plan" }
tremolite-llm = { path = "../tremolite-llm" }
tremolite-config = { path = "../tremolite-config" }
tremolite-server = { path = "../tremolite-server" }
tremolite-dashboard = { path = "../tremolite-dashboard" }
tremolite-cron = { path = "../tremolite-cron" }
tremolite-reflection = { path = "../tremolite-reflection" }
tremolite-delegation = { path = "../tremolite-delegation" }
tremolite-mcp = { path = "../tremolite-mcp" }
tremolite-channels = { path = "../tremolite-channels" }
tremolite-compress = { path = "../tremolite-compress" }
tremolite-packaging = { path = "../tremolite-packaging" }
tremolite-distiller = { path = "../tremolite-distiller" }
ratatui = "0.30"
crossterm = "0.29"
unicode-width = "0.2"
