[package]
name = "tremolite-config"
version = "0.2.0"
edition = "2021"
description = "Configuration system for Tremolite — reads config.toml, resolves env vars, initializes providers"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
toml = "0.8"
tremolite-llm = { path = "../tremolite-llm" }
thiserror = { workspace = true }
