[package]
name = "tremolite-self-learner"
version = "0.1.0"
edition = "2021"
description = "Self-learning engine — discovers skill gaps and generates new skills from documentation analysis"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["std"] }
tracing = { workspace = true }
tremolite-core = { path = "../tremolite-core" }
tremolite-llm = { path = "../tremolite-llm" }
